--- a/index.html
+++ b/index.html
@@ -5,50 +5,77 @@
 </head>
 
 <body>
-    <h2>My Cytoscape Graph</h2>
-    <div id="cy" style="width: 800px; height: 600px; border: 1px solid black;"></div>
+    // Initialize Cytoscape with advanced settings
+let cy = cytoscape({
+  container: document.getElementById('cy'),
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var cy = cytoscape({
-                container: document.getElementById('cy'), // Target div
+  elements: generateRandomGraph(20, 40), // Generates a random network with 20 nodes, 40 edges
 
-                elements: [ // Graph elements
-                    { data: { id: 'A' } },
-                    { data: { id: 'B' } },
-                    { data: { id: 'C' } },
-                    { data: { source: 'A', target: 'B' } },
-                    { data: { source: 'B', target: 'C' } }
-                ],
+  style: [
+    { selector: 'node', style: { 'background-color': '#007bff', 'label': 'data(label)', 'font-size': '12px', 'text-valign': 'center', 'color': 'white' } },
+    { selector: 'edge', style: { 'line-color': '#ccc', 'width': 'mapData(weight, 1, 10, 2, 8)', 'curve-style': 'bezier', 'label': 'data(weight)' } },
+    { selector: ':selected', style: { 'border-width': 3, 'border-color': 'red' } },
+    { selector: '.highlighted', style: { 'background-color': 'yellow', 'line-color': 'yellow', 'transition-duration': '0.5s' } }
+  ],
 
-                style: [ // Node and edge styling
-                    {
-                        selector: 'node',
-                        style: {
-                            'background-color': '#007bff',
-                            'label': 'data(id)',
-                            'color': '#fff',
-                            'text-valign': 'center',
-                            'text-halign': 'center'
-                        }
-                    },
-                    {
-                        selector: 'edge',
-                        style: {
-                            'width': 2,
-                            'line-color': '#ccc',
-                            'target-arrow-shape': 'triangle'
-                        }
-                    }
-                ],
+  layout: { name: 'cose', animate: true }, // Force-directed layout for better visualization
 
-                layout: { // Graph layout
-                    name: 'grid',
-                    rows: 2
-                }
-            });
-        });
-    </script>
+  userZoomingEnabled: true, 
+  userPanningEnabled: true
+});
+
+// Function to generate a random graph
+function generateRandomGraph(nodeCount, edgeCount) {
+  let nodes = [], edges = [];
+  for (let i = 0; i < nodeCount; i++) {
+    nodes.push({ data: { id: N${i}, label: Node ${i} } });
+  }
+  for (let i = 0; i < edgeCount; i++) {
+    let src = N${Math.floor(Math.random() * nodeCount)};
+    let tgt = N${Math.floor(Math.random() * nodeCount)};
+    if (src !== tgt) edges.push({ data: { id: ${src}-${tgt}, source: src, target: tgt, weight: Math.floor(Math.random() * 10) + 1 } });
+  }
+  return { nodes, edges };
+}
+
+// Node click event: Show shortest path using Dijkstra
+cy.on('tap', 'node', function (event) {
+  let node = event.target;
+  cy.elements().removeClass('highlighted');
+  let dijkstra = cy.elements().dijkstra(node);
+  dijkstra.pathTo(cy.$('#N5')).addClass('highlighted');
+});
+
+// PageRank Algorithm (Importance of Nodes)
+cy.nodes().forEach(n => {
+  let rank = Math.random(); // Replace with actual PageRank logic
+  n.data('rank', rank);
+  n.style('width', rank * 50 + 'px');
+  n.style('height', rank * 50 + 'px');
+});
+
+// Clustering (Community Detection)
+let clusters = cy.elements().kMeans({ k: 3 });
+clusters.forEach(cluster => {
+  cluster.addClass('highlighted');
+});
+
+// Graph Traversal: Depth-First Search (DFS)
+cy.elements().dfs({
+  roots: '#N0',
+  visit: function (node) { console.log("DFS visiting: ", node.id()); }
+});
+
+// Add tooltips using tippy.js (external library)
+cy.on('mouseover', 'node', function (event) {
+  let node = event.target;
+  let tooltip = document.createElement('div');
+  tooltip.className = 'tooltip';
+  tooltip.innerText = Node: ${node.id()};
+  document.body.appendChild(tooltip);
+  tooltip.style.left = event.renderedPosition.x + 'px';
+  tooltip.style.top = event.renderedPosition.y + 'px';
+});
 </body>
 
 </html>
